[package]
name = "rcc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
savon = "0.2.0"

[build-dependencies]
savon = "0.2.0"
env_logger = "0.10.0"
log = "0.4.19"
