[package]
name = "vault_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.26"
log = "0.4.19"
tokio = "1.29.0"
vaultrs = { version = "0.7.0", default-features = false, features = [
    "native-tls"
] }
